ts module alias

--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,8 @@
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "_moduleAliases": {
+    "@utils": "dist/utils"
+  }
 }
