--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,19 @@
     "build": "tsc"
   },
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "graphql-yoga": "1.2.0",
     "module-alias": "^2.2.2",
     "mongodb": "^3.5.3",
     "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-node": "^8.10.2"
   },
   "main": "index.js",
   "_moduleAliases": {
     "@utils": "dist/utils"
+  },
+  "devDependencies": {
+    "module-alias": "^2.2.2",
+    "typescript": "^3.9.7"
   }
 }
