--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-client-preset": "1.0.6",
-    "graphql": "0.12.3",
+    "@apollo/client": "^3.1.3",
+    "antd": "^4.5.4",
+    "graphql": "^15.3.0",
     "graphql-tag": "2.6.1",
     "react": "16.10.0",
-    "react-apollo": "2.0.4",
     "react-dom": "16.10.0",
     "react-scripts": "1.1.0"
   },
